--- a/content/Pseudo online LSTM RNN - part 2.ipynb
+++ b/content/Pseudo online LSTM RNN - part 2.ipynb
@@ -15,6 +15,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### NOTE: Please see [updated blog post](./pseudo-online-lstm-rnn-revisited.html) for this project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In the [previous post](./pseudo-online-lstm-rnn.html), we built a way to convert a stream of data points $(X_t, y_t)$ into sample batches $(X_{batch}, y_{batch})$ suitable to train an RNN. In this post, let's use that code to build an `PseudoOnlineModel` Keras model class.\n",
     "\n",
     "## Relevant code from previous post\n",
